--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 </head>
 <body>
     <!--zone bovenaan-->
+    <div class="navigatiebalk">
+
         <img src='images/logo_belisol.jpg'>
         
-            <ul>
-                <li><a href='#'>Werken bij Belisol</a></li>
-                <li><a href='#'>Showrooms</a></li>
-                <li><a href='#'>Zoeken</a></li>
-                <li><a href='#'>Mijn locatie</a></li>
-            </ul>
-        <p>Offerte opvragen</p>
+    <nav>
+        <ul>
+            <li><a href='#'>Werken bij Belisol</a></li>
+            <li><a href='#'>Showrooms</a></li>
+            <li><a href='#'>Zoeken</a></li>
+            <li><a href='#'>Mijn locatie</a></li>
+        </ul>
+        <p id="offerte">Offerte opvragen</p>
+    </nav>
+</div>
 
         
     <!--submenu - opdracht 6
